Use 4 CPUs for building for Android
Using -j4 when building for Android. This sets the number
of cpus to 4 and speeds up the builds.

--- a/android_builds/Dockerfile.android.x86
+++ b/android_builds/Dockerfile.android.x86
@@ -34,4 +34,4 @@ RUN echo "[2/2] setting up..." && \
 	rm $NDK_NAME.zip
 
 CMD android-gcc-toolchain x86 --api 17 --host gcc-lpthread -C \
-	sh -c "cd node; ./configure --without-intl --without-inspector --dest-cpu=x86 --dest-os=android --without-snapshot --enable-static && make"
+	sh -c "cd node; ./configure --without-intl --without-inspector --dest-cpu=x86 --dest-os=android --without-snapshot --enable-static && make -j4"
