--- a/android_builds/Dockerfile.android.arm
+++ b/android_builds/Dockerfile.android.arm
@@ -30,11 +30,11 @@ RUN echo "[1/2] cloning dependencies..." && \
 RUN echo "[2/2] setting up..." && \
         cd build && \
  	curl -fSOL https://dl.google.com/android/repository/$NDK_NAME.zip && \
-	unzip $NDK_NAME.zip && \
+	unzip -q $NDK_NAME.zip && \
 	rm $NDK_NAME.zip
 
 COPY node /build/node/node.armeabi-v7a/
 WORKDIR /build/node/node.armeabi-v7a/
 
 CMD android-gcc-toolchain arm --api 17 --host gcc-lpthread -C \
-	sh -c "cd node; ./configure --without-intl --without-inspector --dest-cpu=arm --dest-os=android --without-snapshot --enable-static && make -j4"
+	sh -c "cd node; ./configure --without-intl --without-inspector --dest-cpu=arm --dest-os=android --without-snapshot --enable-static && make -j4 > /dev/null"
