--- a/android_builds/Dockerfile.android.x86
+++ b/android_builds/Dockerfile.android.x86
@@ -29,11 +29,11 @@ RUN echo "[1/2] cloning dependencies..." && \
 RUN echo "[2/2] setting up..." && \
         cd /build && \
  	curl -fSOL https://dl.google.com/android/repository/$NDK_NAME.zip && \
-	unzip $NDK_NAME.zip && \
+	unzip -q $NDK_NAME.zip && \
 	rm $NDK_NAME.zip
 
 COPY node /build/node/node.x86/
 WORKDIR /build/node/node.x86/
 
 CMD android-gcc-toolchain x86 --api 17 --host gcc-lpthread -C \
-	sh -c "cd node; ./configure --without-intl --without-inspector --dest-cpu=x86 --dest-os=android --without-snapshot --enable-static && make -j4"
+	sh -c "cd node; ./configure --without-intl --without-inspector --dest-cpu=x86 --dest-os=android --without-snapshot --enable-static && make -j4 > /dev/null"
